<resources>
    <string name="app_name">Mini Poll</string>
    <string name="title_activity_login">Sign in</string>

    <!--&lt;!&ndash; Strings related to login &ndash;&gt;-->
    <!--<string name="prompt_email">Email</string>-->
    <!--<string name="prompt_password">Password (optional)</string>-->
    <!--<string name="action_sign_in">Sign in or register</string>-->
    <!--<string name="action_sign_in_short">Sign in</string>-->
    <!--<string name="error_invalid_email">This email address is invalid</string>-->
    <!--<string name="error_invalid_password">This password is too short</string>-->
    <!--<string name="error_incorrect_password">This password is incorrect</string>-->
    <!--<string name="error_field_required">This field is required</string>-->
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
    <!--completions."-->
    <!--</string>-->
    <!--<string name="title_activity_main2">Main2Activity</string>-->
    <!--<string name="title_activity_create_profil">CreateProfil</string>-->
    <!---->

    <!-->Activity Connection -->
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="CreateAccount">Create Account</string>

    <!-->Activity Create Account -->
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="ok">Validation</string>

    <!-->Activity Create Profil -->
    <string name="LastName">Last Name</string>
    <string name="FirstName">First Name</string>
    <string name="Mail">Mail Address</string>

    <!-->Activity main -->
    <string name="Choix">Choice</string>
    <string name="NewChoix">New Choice</string>
    <string name="Questionnaire">Quizz</string>
    <string name="NewQuestionnaire">New Quizz</string>
    <string name="Sondage">Survey</string>
    <string name="NewSurvey">New Survey</string>
    <string name="Confirm">Confirm</string>



    <!--newSondageTempoActivity-->
    <string name="FieldNbrOfProposition">Propositions :</string>
    <string name="FieldNbrOfChoice">Choices :</string>

    <!--newSondageActivity-->
    <string name="FormulateQuestion">Formulate the question :</string>
    <string name="DescriptionSurvey">To create a new Survey, please fill in the number of propositions as well as the number of possible choices. </string>
    <string name="NewSurveyPageTitle"><u>New Survey</u></string>
    <string name="Titre">Title</string>
    <string name="NewSurveyTitle">Survey Title : </string>
    <string name="Proposition">Proposition</string>
    <string name="previsualisation">Prévisualisation</string>
    <string name="question">Question</string>
    <string name="cloturer">Cloturer</string>

    <!--activity new poll-->
    <string name="TitreNewPoll">Choose your type of new poll</string>
    <string name="title_activity_new_quizz">NewQuizzActivity</string>

    <!--activity new choice-->
    <string name="CreateChoixTitle">New Choice</string>
    <string name="TypeChoice">Choose between text and picture</string>
    <string name="Choix1">First choice :</string>
    <string name="Choix2">Second choice :</string>

    <!--activity choose image-->
    <string name="Gallery">Image gallery</string>
    <string name="Camera">Take a picture</string>

    <!--activity newQuestion-->
    <string name="Propositions">Propositions :</string>
    <string name="FieldRightAnswer">Right answer\'s number</string>

    <!--activity newQuizz-->
    <string name="NewQuizTitle">Quiz title :</string>
    <string name="FieldNbrOfQuestion">Select the number of questions</string>

    <!--activity QuizzActivity-->
    <string name="Suivant">Next</string>

    <!--activity QuizzActivity-->
    <string name="Back">Back to menu</string>

    <!--activity_liste_ami-->
    <string name="Friend">Friend</string>

</resources>
